--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <hr>
 
+        <p>If you want to know more click here</p>
+        <a href="about.html">About Us</a>
+
         <h1>This is a Header</h1>
 
         <h2>This is a Medium Header</h2>
@@ -20,6 +23,14 @@
         <p>This is a new Paragraph</p>
 
         <bold>This is a bold text</bold>
+
+        <br>
+
+            <p>This is a new Paragraph</p>
+
+            <p>This is another new Paragraph</p>
+
+        <br>
 
     <hr>
 
